Mint-X: Fixed alignment issue in user applet

--- a/usr/share/themes/Mint-X/cinnamon/cinnamon.css
+++ b/usr/share/themes/Mint-X/cinnamon/cinnamon.css
@@ -2223,12 +2223,7 @@ StScrollBar StButton#vhandle:hover
  * User Applet
  * ===================================================================*/
  
- .user-box {
-  	padding: .4em 0em;  
-  	padding-right: 3.6em;
-  	spacing: 6px;
-}
-
+ 
 .user-icon {  
   	background-color: rgb(236,236,236);
     border: 1px solid rgb(192,192,192);
